Get Windows build working and update README.md
Using http://github.com/bitshifter/glfw-rs until Windows fixes are
applied upstream. Updated README.md with Windows build instructions
based on the instructions for building Rust on Windows.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ authors = ["Cameron Hart <cam@bitshifter.net.nz>"]
 git = "https://github.com/bjz/gl-rs"
 
 [dependencies.glfw]
-git = "https://github.com/bjz/glfw-rs.git"
+git = "https://github.com/bitshifter/glfw-rs.git"
