Fixed compilation for latest rustc
rustc 1.0.0-nightly (be9bd7c93 2015-04-05) (built 2015-04-06)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ description = "OpenGL Super Bible 6 Application Framework"
 
 [dependencies]
 log = "*"
+num = "*"
+rand = "*"
 
 [dependencies.gl]
 git = "https://github.com/bjz/gl-rs.git"
