Use bitshifter/glfw-rs branch for now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
-
 name = "sb6"
 version = "0.0.1"
 authors = ["Cameron Hart <cam@bitshifter.net.nz>"]
 description = "OpenGL Super Bible 6 Application Framework"
 
 [dependencies]
+gl = "*"
 log = "*"
 num = "*"
 rand = "*"
 
-[dependencies.gl]
-git = "https://github.com/bjz/gl-rs.git"
-
 [dependencies.glfw]
-git = "https://github.com/bjz/glfw-rs.git"
+git = "https://github.com/bitshifter/glfw-rs.git"
